# api/src/swagger.yml
@@ -24,6 +24,16 @@ paths:
               schema:
                 $ref: "#/components/schemas/ShopResponse"
 
+  /user/token/revoke:
+    delete:
+      summary: Revoke an access token
+      description: logout
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: success
+
   /user/token:
     post:
       summary: Issue a user access token
@@ -55,16 +65,19 @@ paths:
                 properties:
                   accessToken:
                     type: string
-                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
                   tokenType:
                     type: string
                     example: Bearer
+                  createdAt:
+                    type: integer
+                    example: 1715328000000
                   expiresIn:
                     type: integer
-                    example: 3600
+                    example: 3600000
                   refreshToken:
                     type: string
-                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
                   refreshTokenExpiresIn:
                     type: integer
                     example: 86400
